<resources>
    <string name="app_name">IOTApp</string>
        <string name="username">Tên đăng nhập</string>
        <string name="pass">Mật khẩu</string>
        <string name="member">Ghi nhớ tài khoản</string>
        <string name="login">Đăng nhập</string>
        <string name="home">My Home</string>
        <string name="config">CÀI ĐẶT</string>
        <string name="logout">ĐĂNG XUẤT</string>
        <string name="scene">Cảnh</string>
        <string name="repeat">Lặp lại</string>
        <string name="infor">THÔNG TIN</string>
        <string name="private_server">Private</string>
        <string name="public_server">Public</string>
        <string name="Ok">Ok</string>
        <string name="alarm">Hẹn giờ</string>
        <string name="cancel">Hủy</string>
        <string name="save">Lưu</string>
        <string name="camera"></string>
        <string name="tag"></string>
        <string name="group">Group</string>
        <string name="forget_pass">Quên mật khẩu ?</string>
        <string name="alarm_on">BẬT HẸN GIỜ</string>
        <string name="alarm_off">TẮT HẸN GIỜ</string>
        <string name="alarm_setting">CÀI ĐẶT HẸN GIỜ</string>
        <string name="house">Tên nhà</string>
        <string name="http">PORT WEB</string>
        <string name="socket">PORT SOCKET</string>
        <string name="mac">MAC</string>
        <string name="state">Trạng thái</string>
        <string name="version">Phiên bản</string>
        <string name="website">Website</string>
        <string name="web_url">oritek.vn</string>
        <string name="feedback">Góp ý</string>
        <string name="connected">Đã kết nối</string>
        <string name="gmail">info@oritek.vn</string>
        <string name="delete_alarm">Xóa hẹn giờ</string>
        <string name="ip_lan">IP Lan</string>
        <string name="ip_internet">IP Internet</string>
        <string name="domain">Tên miền</string>
        <string name="complete">Xong</string>
        <string name="copy_right">Copyright @ 2018 Oritek</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
