<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackgroung"
              android:alpha="0.85"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/layout_back">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back_icon"
                android:layout_marginLeft="@dimen/_10dp"
                android:id="@+id/img_back"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/infor"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            />
        
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_equiment"
        android:orientation="horizontal">
        <TextView
            android:text="@string/house"
            android:id="@+id/tv_house"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/_10dp"
            android:gravity="bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_name_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:textAllCaps="true"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_equiment"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mac"
            android:id="@+id/tv_mac"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/_10dp"
            android:gravity="bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tv_mac_id"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:textAllCaps="true"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_equiment"
        android:orientation="horizontal">
        <TextView
            android:text="@string/state"
            android:id="@+id/tv_state"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/_10dp"
            android:gravity="bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tv_state_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:textAllCaps="false"
                android:text="@string/connected"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_equiment"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/version"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_version_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:textAllCaps="true"
                android:text="15"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_equiment"
        android:orientation="horizontal">
        <TextView
            android:text="@string/website"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/_10dp"
            android:gravity="bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tv_website"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:textAllCaps="false"
                android:text="@string/web_url"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_equiment"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_feedback"
            android:text="@string/feedback"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/_10dp"
            android:gravity="bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/gmail"
                />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"/>
</LinearLayout>