<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:background="@android:color/holo_orange_light"
    tools:context="com.example.ducvietho.iotapp.screen.login.LoginActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
       >
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin">
            <EditText
                android:id="@+id/ed_user"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:background="@android:color/white"
                android:hint="@string/username"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/padding"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_user_left"/>
        </android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/margin"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginTop="@dimen/margin">
    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/padding"
        android:hint="@string/pass"
        android:textSize="@dimen/text_size"
        android:drawableLeft="@drawable/ic_lock_left"
        />
</android.support.v7.widget.CardView>
            />
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin">
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="@dimen/width_login"
                android:layout_height="@dimen/height"
                android:background="@color/colorAccent"
                android:text="@string/login"
                android:gravity="center"
                android:textSize="@dimen/text_size"

                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</RelativeLayout>


</ScrollView>
