<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
      android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"

            android:gravity="center"
            android:text="@string/config"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/black"
                android:text="@string/default_server"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_15dp"/>
            <EditText
                android:id="@+id/ed_default"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="@dimen/height"
                android:background="@android:color/white"
                android:textSize="@dimen/text_size"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:padding="@dimen/padding"
                android:gravity="center_vertical"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/black"
                android:text="@string/public_server"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_15dp"/>
            <EditText
                android:id="@+id/ed_public"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="@dimen/height"
                android:background="@android:color/white"
                android:textSize="@dimen/text_size"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:padding="@dimen/padding"
                android:gravity="center_vertical"

                />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="@dimen/width_login"
        android:layout_height="@dimen/_40dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black"
        android:text="@string/Ok"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin"/>

</LinearLayout>