<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroung"
                android:orientation="vertical"
                android:alpha="0.9"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroung"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorButton"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:id="@+id/tv_alarm"
                android:text="@string/alarm"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/colorButton"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view"
            android:background="@color/colorBlur" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_time"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <Switch
                    android:id="@+id/switch_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Giờ Bật"
                    android:id="@+id/tv_on_hour"
                    android:textSize="@dimen/text_size"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            <io.blackbox_vision.wheelview.view.WheelView
                android:id="@+id/wheel_hour_on"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:textSize="@dimen/text_size_wheel"
                app:drawItemCount="7"
                app:centerTextColor="@android:color/white"
                app:canLoop="true"
                app:topBottomTextColor="#ffafafaf"
                />
            <io.blackbox_vision.wheelview.view.WheelView
                android:id="@+id/wheel_minute_on"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawItemCount="7"
                app:textSize="@dimen/text_size_wheel"
                app:centerTextColor="@android:color/white"
                app:canLoop="true"
                app:topBottomTextColor="#ffafafaf"
                />
            <io.blackbox_vision.wheelview.view.WheelView
                android:id="@+id/wheel_on"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                app:drawItemCount="5"
                app:canLoop="true"
                app:textSize="@dimen/text_size_wheel"
                app:centerTextColor="@android:color/white"
                app:topBottomTextColor="#ffafafaf"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view"
            android:background="@color/colorBlur" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBlur"
                android:alpha="0.5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/tv_repeat"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:text="@string/repeat"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10dp"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/img_next"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_next"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_time"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <Switch
                    android:id="@+id/switch_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Giờ Tắt"
                    android:id="@+id/tv_off_hour"
                    android:textSize="@dimen/text_size"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            <io.blackbox_vision.wheelview.view.WheelView
                android:id="@+id/wheel_hour_off"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                app:textSize="@dimen/text_size_wheel"
                app:drawItemCount="7"
                app:centerTextColor="@android:color/white"
                app:canLoop="true"
                app:topBottomTextColor="#ffafafaf"
                />
            <io.blackbox_vision.wheelview.view.WheelView
                android:id="@+id/wheel_minute_off"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawItemCount="7"
                app:textSize="@dimen/text_size_wheel"
                app:centerTextColor="@android:color/white"
                app:canLoop="true"
                app:topBottomTextColor="#ffafafaf"
                />
            <io.blackbox_vision.wheelview.view.WheelView
                android:id="@+id/wheel_off"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawItemCount="5"
                app:textSize="@dimen/text_size_wheel"
                app:centerTextColor="@android:color/white"
                app:canLoop="true"
                app:topBottomTextColor="#ffafafaf"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view"
            android:background="@color/colorBlur" />
    </LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_equiment"
    android:layout_alignParentBottom="true"
    android:text="@string/delete_alarm"
    android:textAllCaps="true"
    android:textColor="@color/colorRed"
    android:gravity="center"
    android:id="@+id/tv_delete_alarm"
    android:background="@color/colorBlur"
    android:alpha="0.5"/>
</RelativeLayout>